fixed stretch-img, light table edits, and wip blur-background

--- a/src/Project/Project.module.css
+++ b/src/Project/Project.module.css
@@ -528,3 +528,7 @@
   pointer-events: none;
   color: black;
 }
+
+.openFolderButton {
+  cursor: pointer;
+}
